# huhi-android

./: .gitignore  .gitmodules  AUTHORS  CHANGELOG.md  DEPS  ISSUE_TEMPLATE.md  README.md  babel.config.js  huhi_version.xml  package-lock.json  package.json  tsconfig.json
android_webview/: BUILD.gn
android_webview/browser/: aw_browser_context.cc  aw_content_browser_client.cc  aw_content_browser_client.h  aw_download_manager_delegate.cc  aw_settings.cc
android_webview/common/: BUILD.gn
android_webview/lib/: profile_content_stubs.cc
android_webview/renderer/: aw_content_settings_client.cc  aw_content_settings_client.h
ash/strings/: ash_strings_sw.xtb
chrome/: chrome_paks.gni  chrome_repack_locales.gni
chrome/android/: BUILD.gn  chrome_java_sources.gni
chrome/app/: BUILD.gn  chrome_content_browser_overlay_manifest.cc  chromium_strings.grd  generated_resources.grd  google_chrome_strings.grd
chrome/browser/: BUILD.gn  browser_resources.grd  chrome_content_browser_client.cc  chrome_content_browser_client.h  flag_descriptions.cc  flag_descriptions.h  huhi_sync_worker.cc  huhi_sync_worker.h  restart_worker.cc  stats_updater.cc  stats_updater.h
chrome/common/: chrome_features.cc  chrome_features.h  pref_names.cc  pref_names.h  render_messages.h  webui_url_constants.cc  webui_url_constants.h
chrome/renderer/: content_settings_observer.cc  content_settings_observer.h  worker_content_settings_client.cc  worker_content_settings_client.h
chrome/utility/: BUILD.gn  chrome_content_utility_client.cc  chrome_content_utility_client.h
chromecast/browser/: cast_network_contexts.cc
components/: bookmark_bar_strings.grdp  new_or_sad_tab_strings.grdp
components/common/: typescript.gni
components/definitions/: global.d.ts  non-js-loaders.d.ts  rewards.d.ts  rewardsDonate.d.ts  rewardsExtensions.d.ts
components/huhi_resources/: BUILD.gn  resource_ids
components/huhi_rewards_ui/: BUILD.gn
components/huhi_rewards_ui/internals/: BUILD.gn
components/huhi_rewards_ui/resources/: BUILD.gn  huhi_rewards.html  huhi_rewards.tsx  qrUtils.ts  storage.ts  utils.ts
components/huhi_rewards_ui/resources/actions/: rewards_actions.ts
components/huhi_rewards_ui/resources/components/: adsBox.tsx  adsOnboarding.tsx  app.tsx  contributeBox.tsx  donationsBox.tsx  grant.tsx  pageWallet.tsx  settingsPage.tsx  welcomePage.tsx
components/huhi_rewards_ui/resources/constants/: rewards_types.ts
components/huhi_rewards_ui/resources/reducers/: grant_reducer.ts  publishers_reducer.ts  rewards_reducer.ts  wallet_reducer.ts
components/huhi_rewards_ui/script/lib/: config.py  helpers.py  transifex.py
components/ntp_tiles/: most_visited_sites.cc  popular_sites_impl.cc
components/resources/: BUILD.gn  components_resources.grd  huhi_rewards_ui_resources.grdp
components/search_engines/: prepopulated_engines.json  search_engine_type.h  template_url_prepopulate_data.cc  util.cc
components/webpack/: gen-webpack-grd.js  (+1 more)
huhi_src/browser/: BUILD.gn  huhi_tab_helpers.cc  huhi_tab_helpers.h  huhi_tab_url_web_contents_observer.cc  huhi_tab_url_web_contents_observer.h  web_contents_ledger_observer.cc  web_contents_ledger_observer.h
scripts/: .gclient_entries  BuildApkDefault.sh  BuildApkStable.sh  buildRefApks.sh  buildRelease.js  buildReleaseForDirWithArgsAndTarget.sh  buildReleasesAllAndModern.sh  getThirdParties.js  postThirdPartiesSetup.js  updateSubModules.js
url/: gurl.cc
(+1228 files in other folders)
