import("//tools/grit/repack.gni")

repack("huhi_resources") {
  deps = [
    "//components/huhi_rewards_ui:ui",
  ]
  sources = [
    "$root_gen_dir/components/huhi_rewards/resources/huhi_rewards_resources.pak",
  ]
  # Match the name that chromium is expecting
  output = "$root_gen_dir/components/huhi_resources.pak"
}